# CraftUI

./: .gitignore  CMakeLists.txt  Demo.cpp  LockFreeQueue.h  Player.cpp  Player.h  README.md  common.hpp  main.cpp  test.xml
CMake/Modules/: FindSDL2IMAGE.cmake  FindSDL2MIXER.cmake  FindSDL2TTF.cmake
Layout/: GridLayout.cpp  GridLayout.h  HorizontalLayout.cpp  HorizontalLayout.h  VerticalLayout.cpp  VerticalLayout.h  WidgetLayout.cpp  WidgetLayout.h
Player/: CMakeLists.txt  LockFreeQueue.h  Player.cpp  Player.h
core/: Control.cpp  Control.h  Event.cpp  Event.h  MetaInfo.cpp  MetaInfo.h  Object.cpp  Object.h  Object.hpp  System.cpp  System.h  System.hpp
otherBackPack/: Player.cpp  Player.h
units/: ClipBoard.cpp  ClipBoard.h  Cursor.cpp  Cursor.h  Dialog.cpp  Dialog.h  Font.cpp  Font.h  Image.cpp  Image.h  MessageBox.cpp  MessageBox.h  MouseCursor.cpp  MouseCursor.h  Rectangle.cpp  Rectangle.h  Rectangle.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  SelectArea.cpp  SelectArea.h  Text.cpp  Text.h
utils/: DefaultLoadNodeFunction.h  Timer.cpp  Timer.h  Util.hpp  XMLLoad.cpp  XMLLoad.h
widget/: AbstractButton.cpp  AbstractButton.h  Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  HorizontalSlider.cpp  HorizontalSlider.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  TextArea.cpp  TextArea.h  VerticalLayout.cpp  VerticalLayout.h  Widget.cpp  Widget.h  Window.cpp  Window.h
